# wechat-sdk

./: Cargo.toml
projects/mini-program-sdk/: Cargo.toml
projects/mini-program-sdk/src/: lib.rs
projects/mini-program-sdk/src/for_error/: mod.rs
projects/mini-program-sdk/src/for_serde/: mod.rs
projects/mini-program-sdk/src/login/: mod.rs
