[package]
name = "wechat-miniprogram-sdk"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/wechat-miniprogram-sdk"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "socks", "rustls-tls"] }
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = "0.3.18"


[features]
default = []

